# osint-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.base.json
.github/workflows/: benchmarks.yml  ci.yml  deploy.yml
apps/api/: Dockerfile  dbmate.yml  fly.toml  package.json  tsconfig.json
apps/go-worker/: Dockerfile  fly.toml  go.mod  go.sum
apps/py-worker/: Dockerfile  fly.toml  pyproject.toml
apps/py-worker/src/py_worker/: auth.py  main.py
apps/py-worker/src/py_worker/tools/: exif_geolocate.py  ghunt_run.py  google_trends.py  holehe_check.py  maigret_search.py  pdf_analyze.py  sherlock_search.py  stealth_http.py  theharvester_run.py
apps/py-worker/tests/: test_auth.py  test_stealth_http.py
benchmark-results/: MASTER-MATRIX.md  STATUS.md  leaderboard.jsonl
benchmark-results/datasets/: browsecomp.jsonl
benchmark-results/raw/: amass-tesla.com.time  amass-tesla.com.txt  assetfinder-cloudflare.com.time  assetfinder-cloudflare.com.txt  assetfinder-github.com.time  assetfinder-github.com.txt  assetfinder-gitlab.com.time  assetfinder-gitlab.com.txt  assetfinder-hackerone.com.time  assetfinder-hackerone.com.txt  assetfinder-shopify.com.time  assetfinder-shopify.com.txt  assetfinder-tesla.com.time  assetfinder-tesla.com.txt  assetfinder-uber.com.time  assetfinder-uber.com.txt  bbot-tesla.time  findomain-cloudflare.com.time  findomain-cloudflare.com.txt  findomain-github.com.time  findomain-github.com.txt  findomain-gitlab.com.time  findomain-gitlab.com.txt  findomain-hackerone.com.time  findomain-hackerone.com.txt  findomain-shopify.com.time  findomain-shopify.com.txt  findomain-tesla.com.time  findomain-tesla.com.txt  findomain-uber.com.time  findomain-uber.com.txt  subfinder-cloudflare.com.time  subfinder-cloudflare.com.txt  subfinder-github.com.time  subfinder-github.com.txt  subfinder-gitlab.com.time  subfinder-gitlab.com.txt  subfinder-hackerone.com.time  (+7 more)
infra/: docker-compose.yml
(+589 files in other folders)
