[project]
name = "py-worker"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "rnet>=3.0.0rc22",
  "pydantic>=2.9",
  "pynacl>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
